<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kk_receiver</name>
  <version>0.0.0</version>
  <description>KinkiKnights InputReceiver</description>
  <maintainer email="kinkiknights@gmail.com">SanjoFumihiro</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>kk_driver_msg</build_depend>
  <exec_depend>kk_driver_msg</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
   <build_type>ament_python</build_type>
  </export>
</package>
